rust/nes/src/mapper/vrc7_audio/dsa_emu2413.rs

/* automatically generated by rust-bindgen 0.68.1 */
#![allow(dead_code)]
#![allow(non_snake_case)]
#![allow(non_camel_case_types)]

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __OPLL_PATCH {
    pub TL: u32,
    pub FB: u32,
    pub EG: u32,
    pub ML: u32,
    pub AR: u32,
    pub DR: u32,
    pub SL: u32,
    pub RR: u32,
    pub KR: u32,
    pub KL: u32,
    pub AM: u32,
    pub PM: u32,
    pub WS: u32,
}
#[test]
fn bindgen_test_layout___OPLL_PATCH() {
    const UNINIT: ::std::mem::MaybeUninit<__OPLL_PATCH> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<__OPLL_PATCH>(),
        52usize,
        concat!("Size of: ", stringify!(__OPLL_PATCH))
    );
    assert_eq!(
        ::std::mem::align_of::<__OPLL_PATCH>(),
        4usize,
        concat!("Alignment of ", stringify!(__OPLL_PATCH))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).TL) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(TL)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).FB) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(FB)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).EG) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(EG)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ML) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(ML)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).AR) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(AR)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).DR) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(DR)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).SL) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(SL)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).RR) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(RR)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).KR) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(KR)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).KL) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(KL)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).AM) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(AM)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).PM) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(PM)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).WS) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_PATCH),
            "::",
            stringify!(WS)
        )
    );
}
pub type OPLL_PATCH = __OPLL_PATCH;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __OPLL_SLOT {
    pub number: u8,
    pub type_: u8,
    pub patch: *mut OPLL_PATCH,
    pub output: [i32; 2usize],
    pub wave_table: *mut u16,
    pub pg_phase: u32,
    pub pg_out: u32,
    pub pg_keep: u8,
    pub blk_fnum: u16,
    pub fnum: u16,
    pub blk: u8,
    pub eg_state: u8,
    pub volume: i32,
    pub key_flag: u8,
    pub sus_flag: u8,
    pub tll: u16,
    pub rks: u8,
    pub eg_rate_h: u8,
    pub eg_rate_l: u8,
    pub eg_shift: u32,
    pub eg_out: u32,
    pub update_requests: u32,
}
#[test]
fn bindgen_test_layout___OPLL_SLOT() {
    const UNINIT: ::std::mem::MaybeUninit<__OPLL_SLOT> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<__OPLL_SLOT>(),
        72usize,
        concat!("Size of: ", stringify!(__OPLL_SLOT))
    );
    assert_eq!(
        ::std::mem::align_of::<__OPLL_SLOT>(),
        8usize,
        concat!("Alignment of ", stringify!(__OPLL_SLOT))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).number) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(number)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).patch) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(patch)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).output) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(output)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).wave_table) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(wave_table)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pg_phase) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(pg_phase)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pg_out) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(pg_out)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pg_keep) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(pg_keep)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).blk_fnum) as usize - ptr as usize },
        42usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(blk_fnum)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fnum) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(fnum)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).blk) as usize - ptr as usize },
        46usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(blk)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_state) as usize - ptr as usize },
        47usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(eg_state)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).volume) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(volume)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).key_flag) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(key_flag)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sus_flag) as usize - ptr as usize },
        53usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(sus_flag)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tll) as usize - ptr as usize },
        54usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(tll)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rks) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(rks)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_rate_h) as usize - ptr as usize },
        57usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(eg_rate_h)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_rate_l) as usize - ptr as usize },
        58usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(eg_rate_l)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_shift) as usize - ptr as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(eg_shift)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_out) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(eg_out)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).update_requests) as usize - ptr as usize },
        68usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_SLOT),
            "::",
            stringify!(update_requests)
        )
    );
}
pub type OPLL_SLOT = __OPLL_SLOT;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __OPLL_RateConv {
    pub ch: ::std::os::raw::c_int,
    pub timer: f64,
    pub f_ratio: f64,
    pub sinc_table: *mut i16,
    pub buf: *mut *mut i16,
}
